# FORGE-Template

./: .gitignore  CLAUDE.md  README.md  llms.txt  pyproject.toml
.claude/: manifest.json
.claude/agents/cocotb-integration-test/: README.md  agent.md
.claude/agents/deployment-orchestrator/: agent.md
.claude/agents/hardware-debug/: agent.md
.claude/commands/: customize-monorepo.md  sync-submodules.md
.claude/handoffs/: README.md
.claude/shared/: ARCHITECTURE_OVERVIEW.md  CONTEXT_MANAGEMENT.md
.claude/workflows/: README.md  submodule-doc-refactor-detailed.md  submodule-doc-refactor-quick.md
docs/: GITHUB_TEMPLATE_SETUP.md  README.md
docs/vendor-reference/: MCC_CustomWrapper_original.vhd  README.md
examples/basic-probe-driver/: BPD-RTL.yaml  README.md  VHDL_SERIALIZATION_MIGRATION.md
examples/basic-probe-driver/vhdl/: BPD_forge_main.vhd  BPD_forge_shim.vhd  CustomInstrument.vhd  CustomWrapper_bpd.vhd  CustomWrapper_bpd_forge.vhd  CustomWrapper_bpd_with_observer.vhd  CustomWrapper_test_stub.vhd  FORGE_ARCHITECTURE.md
examples/basic-probe-driver/vhdl/external_Example/: DS1140_polo_main.vhd  DS1140_polo_shim.vhd  volo_common_pkg.vhd
examples/basic-probe-driver/vhdl/proposed_cocotb_test/: FSM_OBSERVER_INTEGRATION.md  README.md  test_bpd_fsm_observer.py  test_bpd_wrapper_p1.py  test_bpd_wrapper_p2.py  test_bpd_wrapper_p3.py
examples/basic-probe-driver/vhdl/src/: basic_app_time_pkg.vhd  basic_app_types_pkg.vhd  basic_app_voltage_pkg.vhd  basic_probe_driver_custom_inst_main.vhd  fi_probe_interface.vhd.old_pre_yaml
examples/basic-probe-driver/vhdl/tests/: .gitignore  BPD-002v2.yaml  README.md  run.py  test_bpd_fsm_observer_progressive.py  test_configs.py
examples/basic-probe-driver/vhdl/tests/bpd_fsm_observer_tests/: P1_bpd_fsm_observer_basic.py  P2_bpd_fsm_observer_intermediate.py  P3_bpd_fsm_observer_comprehensive.py  __init__.py  bpd_fsm_observer_constants.py
libs/forge-vhdl/: .gitignore  CLAUDE.md  README.md  llms.txt  pyproject.toml
libs/forge-vhdl/docs/: COCOTB_TROUBLESHOOTING.md  VHDL_CODING_STANDARDS.md
libs/forge-vhdl/scripts/: GHDL_FILTER.md
libs/forge-vhdl/tests/: run.py  test_configs.py  test_debug_dut.py  test_forge_voltage_3v3_pkg_progressive.py  test_forge_voltage_5v0_pkg_progressive.py  test_forge_voltage_5v_bipolar_pkg_progressive.py
libs/forge-vhdl/vhdl/debugging/: fsm_observer.vhd
libs/platform/: FORGE_App_Wrapper.vhd  MCC_CustomInstrument.vhd
libs/riscure-models/: CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml
libs/riscure-models/riscure_models/: __init__.py
libs/riscure-models/riscure_models/probes/: __init__.py  ds1120a.py
tools/forge-codegen/: .gitignore  CLAUDE.md  LICENSE  MIGRATION_COMPLETE.md  README.md  llms.txt  pyproject.toml
tools/forge-codegen/docs/: PHASE6F_PROMPT.md  PHASE6_PLAN.md  README.md
tools/forge-codegen/docs/architecture/: agent_system.md  code_generation.md  design_decisions.md  overview.md  submodule_integration.md
tools/forge-codegen/docs/debugging/: fsm_observer_pattern.md
tools/forge-codegen/docs/examples/: common_patterns.md  minimal_probe.yaml  minimal_walkthrough.md  multi_channel.yaml  multi_channel_walkthrough.md
tools/forge-codegen/docs/guides/: getting_started.md  troubleshooting.md  user_guide.md
tools/forge-codegen/docs/reference/: manifest_schema.md  python_api.md  register_mapping.md  type_system.md  vhdl_generation.md  yaml_schema.md
tools/forge-codegen/forge_codegen/: __init__.py
tools/forge-codegen/forge_codegen/basic_serialized_datatypes/: __init__.py  converters.py  mapper.py  metadata.py  time.py  types.py  voltage.py
tools/forge-codegen/forge_codegen/generator/: __init__.py  codegen.py  type_utilities.py
tools/forge-codegen/forge_codegen/models/: __init__.py  app_spec.py  mapper.py  package.py  register.py
tools/forge-codegen/forge_codegen/templates/: main.vhd.j2  shim.vhd.j2
tools/forge-codegen/tests/: test_code_generation.py  test_integration.py  test_mapper.py  test_package.py
